[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/VehicleMissileRound.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0.92549, 0.631373, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 1, 0.92549, 0.631373, 1 )

[node name="VehicleMissileRoundWhite" type="Spatial"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
gravity_vec = Vector3( 0, 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance1" type="MeshInstance" parent="."]
transform = Transform( 0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.35, 0, 0, 0.2 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.05, 0, 0, -0.18 )
mesh = SubResource( 2 )
material/0 = SubResource( 4 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 0.06, 0, 0, 0, 0.06, 0, 0, 0, 0.2, 0, 0, 0.7 )
mesh = SubResource( 2 )
material/0 = SubResource( 5 )

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true

[node name="AccelTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="timeout" from="AccelTimer" to="." method="_on_AccelTimer_timeout"]
